Fixed header to look correct on smaller screens, made menu button appear in the correct place when not logged in to WP, a few other small changes to make it more responsive.

--- a/style.scss
+++ b/style.scss
@@ -372,11 +372,20 @@ article.portfolio {
     height: auto;
     float: left;
     padding: 1%;
+    @media all and (max-width: 640px) {
+      width: 100%;
+      &:after {
+        clear:both; 
+      }
+    }
   }
   .portfolio-single-text {
     width: 50%;
     float: left;
     padding: 1%;
+    @media all and (max-width: 640px) {
+      width: 100%;
+    }
   }
 }
 
@@ -516,11 +525,19 @@ header {
 }
 
 .h1-container {
-  position: absolute;
+  width: 100%;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
+  transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
   letter-spacing: 2px;
+  overflow: hidden;
+  @media all and (max-width: 736px) {
+    left: 0;
+    transform: translateX(0) translateY(50%);
+  }
 }
 
 h1 {
@@ -531,6 +548,7 @@ h1 {
   margin-bottom: 0.25rem; 
   &:hover {
     transform: scale(1.1);
+    text-shadow: 2px 2px 2px #294440;
   }
   @media all and (max-width: 600px) {
     font-size: 2.5rem;
@@ -541,6 +559,9 @@ h2 {
 	text-align: center;
 	font-size: 3rem;
 	padding-top: 5.555rem;
+  @media all and (max-width: 800px) {
+    font-size: 2rem;
+  }
 }
 
 p {
@@ -591,9 +612,9 @@ footer {
   	display: block;
   }
 
-  button.menu-button {
-  	position: fixed;
-	top:5%;
+button.menu-button {
+  top:0;
+  position: fixed;
 	right:2%;
 	background:none;
 	border:none;
